RESOLVED FIXED159125
Fix style invalidation for :active when the activated node has no renderer
https://bugs.webkit.org/show_bug.cgi?id=159125
Summary Fix style invalidation for :active when the activated node has no renderer
Benjamin Poulain
Reported 2016-06-26 14:21:14 PDT
Fix style invalidation for :active when the activated node has no renderer
Attachments
Patch (48.80 KB, patch)
2016-06-26 14:28 PDT, Benjamin Poulain
no flags
Patch (50.06 KB, patch)
2016-06-26 15:07 PDT, Benjamin Poulain
koivisto: review+
commit-queue: commit-queue-
Benjamin Poulain
Comment 1 2016-06-26 14:28:48 PDT
Benjamin Poulain
Comment 2 2016-06-26 15:07:53 PDT
WebKit Commit Bot
Comment 3 2016-06-27 10:56:15 PDT
Comment on attachment 282098 [details] Patch Rejecting attachment 282098 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'apply-attachment', '--no-update', '--non-interactive', 282098, '--port=mac']" exit_code: 2 cwd: /Volumes/Data/EWS/WebKit Last 500 characters of output: atching file LayoutTests/fast/css/pseudo-active-style-sharing-6-expected.txt patching file LayoutTests/fast/css/pseudo-active-style-sharing-6.html patching file LayoutTests/platform/ios-simulator/TestExpectations Hunk #1 FAILED at 1435. 1 out of 1 hunk FAILED -- saving rejects to file LayoutTests/platform/ios-simulator/TestExpectations.rej Failed to run "[u'/Volumes/Data/EWS/WebKit/Tools/Scripts/svn-apply', '--force', '--reviewer', u'Antti Koivisto']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit Full output: http://webkit-queues.webkit.org/results/1580823
Benjamin Poulain
Comment 4 2016-06-27 15:20:36 PDT
Note You need to log in before you can comment on or make changes to this bug.